# bio-mcp

./: .gitignore  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  SUPPORTED_QUERIES.md  biocontainer_client.py  biocontainer_server.py  biofinder  biofinder_client.py  biofinder_server.py  play.ipynb  pyproject.toml  query.py  requirements.txt  server.py  setup.sh  test_biofinder_server.py  test_demo.py  test_search.py
data/: README.md  scrnaseq_biotools.yaml
docs/: DEVELOPER_REFERENCE.md
docs/setup.md/: developer.md  running.md  setup.md
src/bio_mcp/: globals.py
src/bio_mcp/cache/: load.py
src/bio_mcp/mcp/: client.py  phrases.py  prompts.py  server.py
tests/: test_route_query.py
